cmake_minimum_required(VERSION 3.13)
project(minis)
add_subdirectory(lib/raylib)
link_libraries(raylib)
add_executable(minis src/main.c)
include_directories(src)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  /ENTRY:\"mainCRTStartup\"")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/minis DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE})